# irisfit

./: .gitignore  AUTHORS  LICENSE  README.md  README_thesis.md  README_toplas.md  create-archive.sh  dune-project  irisfit.opam  metrics.sh  setup.sh
src/: _CoqProject  dune
src/examples/: diaframe.v  instantiation.v  proofmode.v  utils.v
src/examples/counter/: counter.v  counter_client.v  counter_code.v
src/examples/lockfree/: treiber.v
src/examples/sequential/: cyclist.v  list.v  list_rev.v  (+1 more)
src/final/: addpp.v  common.v  final_semantics.v  final_theorems.v  gc.v  instances.v  liveness_addpp.v  mcs.v  semantics_with_growing_store.v  strong_safety.v  strong_safety_addpp.v  temporal_logic.v  weak_anf.v
src/language/: atomic.v  closure.v  head_semantics.v  invert_step.v  language.v  notation.v  pointers.v  reducible.v  semantics.v  store.v  substitution.v  successors.v  syntax.v  syntax_instances.v
src/lib/: disc.v  fracset.v  nfrac.v  qz.v  qz_cmra.v  smultiset.v  smultiset_cmra.v
src/program_logic/: closed.v  image.v  interp.v  interp_base.v  linked.v  mapsto.v  more_cmras.v  more_interp.v  more_maps_and_sets.v  more_space_lang.v  pbt.v  ph.v  roots_inv.v  tied.v  triple.v  utils.v  wp.v  wp_adequacy.v  wp_alloc.v  wp_call.v  wp_call_prim.v  wp_cas.v  wp_clean.v  wp_closure.v  wp_enc.v  wp_fork.v  wp_free.v  wp_load.v  wp_poll.v  wp_protected.v  wp_spec.v  wp_store.v  wp_updates.v  wpc.v  wpc_logatom.v  wpc_more.v
src/sequential/: README.md  interface.v  wp_sequential.v
src/spacelang/: gset_fixpoint.v  hypotheses.v  iris.v  predecessors.v  stdpp.v
(+25 files in other folders)
