opam-version: "2.0"
maintainer: "Alexandre Moine"
synopsis: "An Iris instance for establishing heap space bounds of concurrent programs in the presence of garbage collection."
homepage: "https://github.com/nobrakal/irisfit"
authors: "Alexandre Moine"
license: "MIT"
bug-reports: "https://github.com/nobrakal/irisfit/issues"
dev-repo: "https://github.com/nobrakal/irisfit"

depends: [
  "ocaml" { (= "4.14.3") }
  "coq" { (= "8.18.0") }
  "coq-equations" { (= "1.3+8.18") }
  "coq-stdpp" { (= "1.9.0") }
  "coq-iris" { (= "4.1.0") }
  "coq-diaframe" { (= "dev.2024-02-22.0.98534c19") }
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
  ]
]
